fix footer wrap [PT #129766891]

--- a/applications/omeka/styles-imports/_footer.scss
+++ b/applications/omeka/styles-imports/_footer.scss
@@ -59,7 +59,6 @@ footer {
 .footer-container {
   text-decoration: none;
   line-height: 20px;
-  white-space: nowrap;
   color: $menu-background-color !important;
   font-size: 14px;
   padding: 20px;
